IF(WIN32)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${KDE4_INCLUDE_DIR} ${QT_INCLUDES})

	SET(qwinhost_STAT_SRCS
		qwinhost.cpp
	)

	QT4_AUTOMOC(${qwinhost_STAT_SRCS})

	ADD_LIBRARY(qwinhost STATIC ${qwinhost_STAT_SRCS})
ELSE(WIN32)
	MESSAGE(STATUS "Only needed on windows")
ENDIF(WIN32)
