INCLUDES = $(all_includes)
METASOURCES = AUTO

noinst_LIBRARIES =  librbackend.a
librbackend_a_SOURCES = rembedinternal.cpp rinterface.cpp rthread.cpp rcommand.cpp rcommandstack.cpp \
rkwindowcatcher.cpp
noinst_HEADERS = rembedinternal.h rinterface.h rthread.h rcommand.h rcommandreceiver.h rcommandstack.h \
rkwindowcatcher.h
SUBDIRS =  rpackages
