INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libscriptbackends.a
noinst_HEADERS =  phpbackend.h scriptbackend.h simplebackend.h
libscriptbackends_a_SOURCES =  phpbackend.cpp scriptbackend.cpp simplebackend.cpp
phpfilesdir = $(kde_datadir)/rkward/phpfiles
phpfiles_DATA = common.php php.ini

