INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libsettings.a
libsettings_a_SOURCES =  rksettings.cpp rksettingsmodule.cpp rksettingsmodulelogfiles.cpp rksettingsmoduleoutput.cpp rksettingsmodulephp.cpp rksettingsmoduleplugins.cpp rksettingsmoduler.cpp
noinst_HEADERS =  rksettings.h rksettingsmodule.h rksettingsmodulelogfiles.h rksettingsmoduleoutput.h rksettingsmodulephp.h rksettingsmoduleplugins.h rksettingsmoduler.h
