INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libsettings.a
libsettings_a_SOURCES = rksettings.cpp rksettingsmodule.cpp \
	rksettingsmodulegeneral.cpp rksettingsmoduleoutput.cpp rksettingsmodulephp.cpp \
	rksettingsmoduleplugins.cpp rksettingsmoduler.cpp rksettingsmodulewatch.cpp \
	rksettingsmoduleobjectbrowser.cpp rksettingsmoduleconsole.cpp
noinst_HEADERS = rksettings.h rksettingsmodule.h rksettingsmodulegeneral.h \
	rksettingsmoduleoutput.h rksettingsmodulephp.h rksettingsmoduleplugins.h rksettingsmoduler.h \
	rksettingsmodulewatch.h rksettingsmoduleobjectbrowser.h rksettingsmoduleconsole.h
